--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,4 +14,10 @@
         android:layout_marginTop="64dp"
         android:text="@string/users_activity" />
 
+    <Button
+        android:id="@+id/button_crypto_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/crypto_activity" />
+
 </LinearLayout>
