--- a/app/src/main/res/layout/activity_crypto.xml
+++ b/app/src/main/res/layout/activity_crypto.xml
@@ -22,7 +22,7 @@
         android:layout_gravity="center" />
 
     <Button
-        android:id="@+id/btnRefreshList"
+        android:id="@+id/buttonRefreshList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
